--- a/src/main/resources/templates/fragments/general/header.html
+++ b/src/main/resources/templates/fragments/general/header.html
@@ -26,7 +26,7 @@
     <meta name="twitter:image" content="https://phitiet.nl/images/main_picture_me_professional.png">
     <meta name="twitter:image:alt" th:attr="content=#{seo.og.image.alt}" content="Phi Tiet - Senior Software Engineer">
     
-    <meta name="theme-color" content="#2dd4bf">
+    <meta name="theme-color" content="#7aa2f7">
     <meta name="color-scheme" content="dark light">
     
     <link rel="canonical" href="https://phitiet.nl">
