--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="chessboard-footer">
                     <p class="chessboard-title" th:text="#{chess.title}">Sicilian Defence: Smith-Morra Gambit Accepted</p>
-                    <p class="chessboard-notation">1.e4 c5 2.d4 cxd4 3.c3 dxc3 4.Nxc3 Nc6 5.Nf3 e6 6.Bc4 a6 7.O-O b5 8.Bd3</p>
+                    <p class="chessboard-notation"><span class="cb-mn">1.</span><span class="cb-hl cb-hl-1">e4</span> <span class="cb-hl cb-hl-2">c5</span> <span class="cb-mn">2.</span><span class="cb-hl cb-hl-3">d4</span> <span class="cb-hl cb-hl-4">cxd4</span> <span class="cb-mn">3.</span><span class="cb-hl cb-hl-5">c3</span> <span class="cb-hl cb-hl-6">dxc3</span> <span class="cb-mn">4.</span><span class="cb-hl cb-hl-7">Nxc3</span> <span class="cb-hl cb-hl-8">Nc6</span> <span class="cb-mn">5.</span><span class="cb-hl cb-hl-9">Nf3</span> <span class="cb-hl cb-hl-10">e6</span> <span class="cb-mn">6.</span><span class="cb-hl cb-hl-11">Bc4</span> <span class="cb-hl cb-hl-12">a6</span> <span class="cb-mn">7.</span><span class="cb-hl cb-hl-13">O-O</span> <span class="cb-hl cb-hl-14">b5</span> <span class="cb-mn">8.</span><span class="cb-hl cb-hl-15">Bd3</span></p>
                     <p class="chessboard-flavor" th:text="#{chess.flavor}">I'm a Gambit player. I love playing the Smith-Morra Gambit positions as both colours!</p>
                     <p class="chessboard-meta" th:text="#{chess.meta}">Animated with CSS</p>
                     <button type="button" class="chessboard-toggle-btn" @click="viewBoard = !viewBoard"
